<resources>
    <string name="app_name">Mr D food Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="firstname">FirstName</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>
    <string name="cellphone">Cellphone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="login">Login</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_example">exampleActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="btAdd">+</string>
    <string name="btSubtract">-</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_order_review">OrderReviewActivity</string>


    <string name="continue_shoppping">Continue Shoppping</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_cash">CashActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_card_review">CardReviewActivity</string>
    <string name="title_activity_orders">OrdersActivity</string>
</resources>
